# sentry-dynamic-sampling-controller

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  config.py  genindex.html  how_does_it_work.html  how_to_deploy.html  index.html  objects.inv  py-modindex.html  pyproject.toml  renovate.json  search.html  searchindex.js
.doctrees/: environment.pickle  how_does_it_work.doctree  how_to_deploy.doctree  index.doctree
.doctrees/references/: sentry.doctree
.doctrees/references/sentry/: admin.doctree  apps.doctree  auth.doctree  choices.doctree  detector.doctree  exceptions.doctree  filters.doctree  forms.doctree  inlines.doctree  mixins.doctree  models.doctree  serializers.doctree  tasks.doctree  utils.doctree  views.doctree
.doctrees/references/sentry/management/: commands.loadpermissions.doctree  index.doctree
.doctrees/references/sentry/metrics/: celery.doctree  index.doctree  wsgi.doctree
.doctrees/references/sentry/webservices/: index.doctree  sentry.doctree
.github/workflows/: documentation.yaml  hadolint.yml  pre-commit.yml  pylama.yml  semver_build_publish.yml  tests.yml
_modules/: index.html
_modules/controller/sentry/: admin.html  apps.html  auth.html  choices.html  detector.html  exceptions.html  filters.html  forms.html  inlines.html  mixins.html  models.html  serializers.html  tasks.html  utils.html  views.html
_modules/controller/sentry/management/commands/: loadpermissions.html
_modules/controller/sentry/metrics/: celery.html  wsgi.html
_modules/controller/sentry/webservices/: sentry.html
_sources/: how_to_deploy.rst.txt
_sources/references/sentry/: apps.rst.txt  utils.rst.txt
_sources/references/sentry/management/: commands.loadpermissions.rst.txt
_sources/references/sentry/webservices/: index.rst.txt  sentry.rst.txt
controller/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
controller/sentry/: __init__.py  admin.py  apps.py  auth.py  choices.py  detector.py  exceptions.py  filters.py  forms.py  inlines.py  mixins.py  models.py  serializers.py  tasks.py  utils.py  views.py
controller/sentry/fixtures/: groups.json
controller/sentry/management/commands/: loadpermissions.py
controller/sentry/metrics/: __init__.py  celery.py  wsgi.py
controller/sentry/migrations/: 0001_initial.py  0002_app_wsgi_ignore_path_alter_app_reference.py  0003_app_celery_ignore_task_app_celery_metrics_and_more.py  0003_metric.py  0004_app_celery_collect_metrics_app_wsgi_collect_metrics.py  0004_rename_timestamp_metric_last_updated.py  0005_alter_app_celery_metrics_alter_app_wsgi_metrics.py  0005_alter_metric_data.py  0006_alter_app_options.py  0006_alter_metric_last_updated.py  0007_alter_app_options.py  0007_app_celery_ignore_task_alter_metric_type.py  0007_app_sentry_project_slug.py  0008_alter_app_options.py  0009_project_remove_app_sentry_project_slug_app_command_and_more.py  0010_project_detection_param_alter_app_celery_ignore_task_and_more.py  0011_alter_event_options_and_more.py  0012_project_detection_result.py  0013_project_last_event.py  0014_alter_app_celery_collect_metrics_and_more.py  0015_app_wsgi_ignore_user_agent_and_more.py  __init__.py
controller/sentry/static/admin/chart/js/: adminchart.js
controller/sentry/templates/admin/: base_site.html  chart_change_form.html
controller/sentry/tests/: conftest.py  test_admin.py  test_auth.py  test_detector.py  test_forms.py  test_models.py  test_sentry_client.py  test_tasks.py  test_utils.py  test_views.py
controller/sentry/tests/data/example-1/: expected.json  stats.json
controller/sentry/webservices/: __init__.py  sentry.py
devops/: docker-compose.example.yaml
devops/etc/: prometheus.yaml  statsd.conf
docker/: docker-compose.example.yaml
docs/: conf.py  how_does_it_work.rst  index.rst
docs/references/: sentry.rst
docs/references/sentry/: admin.rst  auth.rst  choices.rst  detector.rst  exceptions.rst  filters.rst  forms.rst  inlines.rst  mixins.rst  models.rst  serializers.rst  tasks.rst  views.rst
docs/references/sentry/management/: index.rst
docs/references/sentry/metrics/: celery.rst  index.rst  wsgi.rst
references/: sentry.html
references/sentry/: admin.html  apps.html  auth.html  choices.html  detector.html  exceptions.html  filters.html  forms.html  inlines.html  mixins.html  models.html  serializers.html  tasks.html  utils.html  views.html
references/sentry/management/: commands.loadpermissions.html  index.html
references/sentry/metrics/: celery.html  index.html  wsgi.html
references/sentry/webservices/: index.html  sentry.html
templates/admin/: base_site.html
